Fix figures of vertial-align article after beautifying the html

--- a/design/_posts/2014-03-05-vertical-align.sass
+++ b/design/_posts/2014-03-05-vertical-align.sass
@@ -30,6 +30,8 @@ $light_orange: #FFEDAF
     margin-top: 1em
     font-style: italic
     font-size: .8em
+  pre
+    white-space: normal
 
 /*
  *  Background
